--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-carousel": "^0.12.0",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
+    "react-native-dotenv": "^3.4.9",
     "typescript": "^5.1.3"
   },
   "private": true
