--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~49.0.5",
+    "expo-constants": "~14.4.2",
+    "expo-image": "~1.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-progress": "^5.0.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "expo-constants": "~14.4.2",
-    "expo-image": "~1.3.2"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
