--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~49.0.5",
@@ -17,10 +19,12 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-svg": "13.9.0",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "react-native-svg": "13.9.0"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
