--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
+    "@types/react-native-vector-icons": "^6.4.13",
     "react-native-dotenv": "^3.4.9",
     "typescript": "^5.1.3"
   },
